force-app/main/default/objects/Payment_Method__c/Payment_Method__c.object-meta.xml
<CustomObject>
    <description>Stores a customer payment method (e.g. a credit card) related to an Account. Used to demonstrate a Transaction Security Policy that blocks API/SOQL exposure of the classified Credit Card Number field.</description>
    <label>Payment Method</label>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Payment Method Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>