force-app/main/default/objects/Payment_Method__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Account this payment method belongs to.</description>
</CustomField>