force-app/main/default/objects/Payment_Method__c/fields/Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Postal_Code__c</fullName>
    <label>Billing Postal Code</label>
    <type>Text</type>
    <length>20</length>
    <description>Billing ZIP / postal code associated with the payment method.</description>
</CustomField>