force-app/main/default/objects/Payment_Method__c/fields/Cardholder_Name__c.field-meta.xml
<CustomField>
    <fullName>Cardholder_Name__c</fullName>
    <label>Cardholder Name</label>
    <type>Text</type>
    <length>121</length>
    <complianceGroup>PII</complianceGroup>
    <description>Name printed on the card. Classified Confidential / PII.</description>
</CustomField>