force-app/main/default/objects/Payment_Method__c/fields/Credit_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Number__c</fullName>
    <label>Credit Card Number</label>
    <type>EncryptedText</type>
    <length>19</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <complianceGroup>PCI;PII</complianceGroup>
    <description>Primary Account Number (PAN). Encrypted and masked except for the last four characters. Classified Restricted (high risk), PCI, and PII; protected by the High Risk Data in API Queries transaction security policy.</description>
</CustomField>