force-app/main/default/objects/Payment_Method__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
    <description>Card expiration date (stored as the first day of the expiration month).</description>
</CustomField>