force-app/main/default/objects/Payment_Method__c/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <label>Default Payment Method</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this is the default payment method for the Account.</description>
</CustomField>